# LittleWorld

./: README.md  main.py  pyproject.toml  pytest.ini
.cursor/prompts/: generate-merge-request-titile-description.md
.cursor/rules/: git-commit-convention.md
characters_setting/big_guy_1/: personality.MD
scenarios/: CHECKLIST.md  SCENARIOS.md
src/: character.py  config.py  decisions.py  main.py  personality.py  world.py
src/character/: __init__.py  base.py  character_factory.py
src/config/: __init__.py  enum.py  settings.yaml  utils.py
src/config/models/: __init__.py  character_config.py  little_world_config.py
src/language_model/: base.py  llm_base_chatmodel.py  llm_base_engine.py  llm_engine.py
src/language_model/providers/: provider_factory.py
src/world/: __init__.py  dialogue.py  world.py  world_setup.py  world_state.py
src/world/character_setup/: __init__.py  ai_character_a.py  big_guy_1.py  player_a.py
tests/: README.md  __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tests/unit/test_config/: __init__.py  test_env_expansion.py  test_models.py  test_utils.py
tests/unit/test_config/fixtures/: config_with_env_vars.yaml  minimal_config.yaml  valid_config.yaml
